update files, push

--- a/Word2Vec_Workshop_R_Version.ipynb
+++ b/Word2Vec_Workshop_R_Version.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Introduction to Word Embeddings and Language Models\n",
     "\n",
-    "_Authors_: Anneke Dresselhuis, Jonathan Graves, Laura K Nelson\n",
+    "_Authors_: Anneke Dresselhuis (UBC Visual Arts), Jonathan Graves (UBC Economics), Laura K Nelson (UBC Sociology)\n",
     "\n",
     "<div>\n",
     "<img src=\"media/word_embedding_cover_art.png\" width=\"1000\"/>\n",
@@ -223,7 +223,8 @@
     "#install.packages(\"scales\")\n",
     "#install.packages(\"tm\")\n",
     "#install.packages(\"MASS\")\n",
-    "#install.packages(\"SentimentAnalysis\")"
+    "#install.packages(\"SentimentAnalysis\")\n",
+    "#install.packages(\"reticulate\")"
    ]
   },
   {
@@ -262,6 +263,7 @@
     }
    ],
    "source": [
+    "# Time: 30s\n",
     "library(reticulate)\n",
     "gensim <- import(\"gensim\")\n"
    ]
@@ -497,6 +499,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=\"blue\" size=12>Workshop Run Here at Start</font>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
@@ -513,6 +522,19 @@
     }
    ],
    "source": [
+    "# Load the required libraries\n",
+    "library(tidyverse)\n",
+    "library(repr)\n",
+    "library(proxy)\n",
+    "library(tm)\n",
+    "library(scales)\n",
+    "library(MASS)\n",
+    "\n",
+    "\n",
+    "# Set up figures to save properly\n",
+    "options(jupyter.plot_mimetypes = \"image/png\") \n",
+    "\n",
+    "# Time: 3 mins\n",
     "# File paths and names\n",
     "filelist <- c(\n",
     "  'txtlab_Novel450_English/EN_1850_Hawthorne,Nathaniel_TheScarletLetter_Novel.txt',\n",
@@ -547,7 +569,28 @@
     "text_corpus <- tm_map(text_corpus, removePunctuation)\n",
     "text_corpus <- tm_map(text_corpus, removeNumbers)\n",
     "text_corpus <- tm_map(text_corpus, removeWords, stopwords(\"english\"))\n",
-    "text_corpus <- tm_map(text_corpus, stripWhitespace)"
+    "text_corpus <- tm_map(text_corpus, stripWhitespace)\n",
+    "\n",
+    "## Time: 5 mins\n",
+    "# Create a custom control for DTM with binary term frequency\n",
+    "custom_control <- list(\n",
+    "  tokenize = function(x) SentimentAnalysis::ngram_tokenize(x, ngmax = 1),\n",
+    "  bounds = list(global = c(3, Inf)),\n",
+    "  weighting = weightTf\n",
+    ")\n",
+    "\n",
+    "# Convert the corpus to a DTM using custom control\n",
+    "dtm <- DocumentTermMatrix(text_corpus, control = custom_control)\n",
+    "\n",
+    "# Convert DTM to a binary data frame (0 or 1)\n",
+    "dtm_df_novel <- as.data.frame(as.matrix(dtm > 0))\n",
+    "colnames(dtm_df_novel) <- colnames(dtm)\n",
+    "\n",
+    "# Set row names to novel names\n",
+    "rownames(dtm_df_novel) <- novel_names\n",
+    "\n",
+    "# Print the resulting data frame\n",
+    "head(dtm_df_novel)"
    ]
   },
   {
@@ -639,28 +682,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "## Time: 2 mins\n",
-    "# Create a custom control for DTM with binary term frequency\n",
-    "custom_control <- list(\n",
-    "  tokenize = function(x) SentimentAnalysis::ngram_tokenize(x, ngmax = 1),\n",
-    "  bounds = list(global = c(3, Inf)),\n",
-    "  weighting = weightTf\n",
-    ")\n",
-    "\n",
-    "# Convert the corpus to a DTM using custom control\n",
-    "dtm <- DocumentTermMatrix(text_corpus, control = custom_control)\n",
-    "\n",
-    "# Convert DTM to a binary data frame (0 or 1)\n",
-    "dtm_df_novel <- as.data.frame(as.matrix(dtm > 0))\n",
-    "colnames(dtm_df_novel) <- colnames(dtm)\n",
-    "\n",
-    "# Set row names to novel names\n",
-    "rownames(dtm_df_novel) <- novel_names\n",
-    "\n",
-    "# Print the resulting data frame\n",
-    "head(dtm_df_novel)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1004,6 +1026,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Because the number of words is so large, for memory reasons we're going to work with just the last few, pictured above.  \n",
+    "\n",
+    "* If you are running this locally, you may want to try this with more words"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {
@@ -1078,7 +1109,9 @@
    ],
    "source": [
     "# Assuming dtm_df is a data frame containing the document-term matrix\n",
-    "dtm_matrix <- as.matrix(transposed_dtm)\n",
+    "tail_transposed_dtm <- tail(transposed_dtm)\n",
+    "\n",
+    "dtm_matrix <- as.matrix(tail_transposed_dtm) #remove 'tail_' to use all words\n",
     "\n",
     "# Calculate cosine similarity\n",
     "cos_sim_words <- proxy::dist(dtm_matrix, method = \"cosine\")\n",
@@ -1169,11 +1202,9 @@
    "source": [
     "# In readable format\n",
     "\n",
-    "#cos_sim_words_rounded <- round(cos_sim_array, 2)\n",
-    "\n",
     "cos_sim_words <- data.frame(round(cos_sim_words, 2))\n",
-    "row.names(cos_sim_words) <- row.names(transposed_dtm)\n",
-    "colnames(cos_sim_words) <- row.names(transposed_dtm)\n",
+    "row.names(cos_sim_words) <- row.names(tail_transposed_dtm) #remove tail_ for all\n",
+    "colnames(cos_sim_words) <- row.names(tail_transposed_dtm) #remove tail_ for all\n",
     "\n",
     "head(cos_sim_words)"
    ]
@@ -1338,7 +1369,7 @@
    },
    "outputs": [],
    "source": [
-    "# Import Metadata into Pandas Dataframe\n",
+    "# Import Metadata into Dataframe\n",
     "meta_df <- read.csv('resources/txtlab_Novel450_English.csv', encoding = 'UTF-8')\n"
    ]
   },
@@ -1624,7 +1655,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training"
+    "## Training\n",
+    "\n",
+    "To train the model we can use this code\n",
+    "\n",
+    "```{r}\n",
+    "# Time: 3 mins\n",
+    "# Train word2vec model from txtLab corpus\n",
+    "\n",
+    "model <- gensim$models$Word2Vec(words_by_sentence, vector_size=100L, window=5L, min_count=25L, sg=1L, alpha=0.025, epochs=5L, batch_words=10000L)\n",
+    "```\n",
+    "\n",
+    "However, this is both very slow and very memory instensive.  Instead, we will short-cut here to load the saved results instead:"
    ]
   },
   {
@@ -1633,10 +1675,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Time: 3 mins\n",
-    "# Train word2vec model from txtLab corpus\n",
+    "# Load pre-tained model word2vec model from txtLab corpus\n",
     "\n",
-    "model <- gensim$models$Word2Vec(words_by_sentence, vector_size=100L, window=5L, min_count=25L, sg=1L, alpha=0.025, epochs=5L, batch_words=10000L)\n"
+    "model$wv <- gensim$models$KeyedVectors$load_word2vec_format('/resources/word2vec.txtlab_Novel150_English.txt')"
    ]
   },
   {
