make R notebook work in colab

--- a/Word2Vec_Workshop_R_Version.ipynb
+++ b/Word2Vec_Workshop_R_Version.ipynb
@@ -9,7 +9,7 @@
     "_Authors_: Anneke Dresselhuis (UBC Visual Arts), Jonathan Graves (UBC Economics), Laura K Nelson (UBC Sociology)\n",
     "\n",
     "<div>\n",
-    "<img src=\"media/word_embedding_cover_art.png\" width=\"1000\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/ubcecon/ai-workshop/main/media/word_embedding_cover_art.png\" width=\"1000\"/>\n",
     "</div>\n",
     "\n"
    ]
@@ -50,7 +50,7 @@
     "## Key Terms\n",
     "Before we dive in, feel free to familiarize yourself with the following key terms and how they relate to each other.\n",
     "</div>\n",
-    "<img src=\"media/ai_key_terms.png\" width=\"500\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/ubcecon/ai-workshop/main/media/ai_key_terms.png\" width=\"500\"/>\n",
     "</div>\n",
     "\n",
     "**Artificial Intelligence (AI):** this term is a broad category that includes the study and development of computer systems that can copy intelligent human behaviour (adapted from [_Oxford Learners Dictionary_](https://www.oxfordlearnersdictionaries.com/definition/english/ai#:~:text=%2F%CB%8Ce%C9%AA%20%CB%88a%C9%AA%2F-,%2F%CB%8Ce%C9%AA%20%CB%88a%C9%AA%2F,way%20a%20human%20brain%20does.))\n",
@@ -76,7 +76,9 @@
     "\n",
     "For example, if we are trying to answer a research question about how popular a term is on the web at a given time, we might use a simple word frequency analysis to count how many times the word \"candidate\" shows up in tweets during a defined electoral period. However, if we wanted to gain a more nuanced understanding of what kind of language, biases or attitudes contextualize the term, \"candidate\" in discourse, we would need to use a method like word embedding to encode meaning into our understanding of how people have talked about candidates over time. Instead of describing our text as a series of word counts, we would treat our text like coordinates in space, where similar words and concepts are closer to each other, and words that are different from each other are further away.\n",
     "\n",
-    "![Comparing word frequency count and word embedding methods](media/word_frequency_vs_word_embeddings.png)\n"
+    "<div>\n",
+    "    <img src=\"https://raw.githubusercontent.com/ubcecon/ai-workshop/main/media/word_frequency_vs_word_embeddings.png\">\n",
+    "</div>\n"
    ]
   },
   {
@@ -86,7 +88,7 @@
     "For example, in the visualization above, a word frequency count returns the number of times the word \"candidate\" or \"candidates\" is used in a sample text corpus. When a word embedding is made from the same text corpus, we are able to map related concepts and phrases that are closely related to \"candidate\" as neighbours, while other words and phrases such as \"experimental study\" (which refers to the research paper in question, and not to candidates specifically) are further away. \n",
     "\n",
     "Here is another example of how different, but related words might be represented in a word embedding:\n",
-    "<img src = \"media/w2v-Analogies.png\">"
+    "<img src = \"https://raw.githubusercontent.com/ubcecon/ai-workshop/main/media/w2v-Analogies.png\">"
    ]
   },
   {
@@ -96,7 +98,7 @@
     "## Making a Word Embedding\n",
     "So, how do word embeddings work? To make a word embedding, an input word gets compressed into a dense vector.\n",
     "\n",
-    "![Creating a word embedding vector](media/creating_a_word_embedding.png)\n",
+    "<img src = \"https://raw.githubusercontent.com/ubcecon/ai-workshop/main/media/creating_a_word_embedding.png\">\n",
     "\n",
     "The magic and mystery of the word embedding process is that often the vectors produced during the model embed qualities of a word or phrase that are not interpretable by humans. However, for our purposes, having the text in vector format is all we need. With this format, we can perform tests like cosine similarity and other kinds of operations. Such operations can reveal many different kinds of relationships between words, as we'll examine a bit later."
    ]
@@ -123,13 +125,14 @@
     "**CBOW** takes the context words (for example, \"Call\",\"Ishmael\") as a single input and tries to predict the word of interest (\"me\").\n",
     "\n",
     "<div>\n",
-    "<img src=\"media/CBOW.gif\" width=\"500\"/>\n",
+    "<img src = \"https://raw.githubusercontent.com/ubcecon/ai-workshop/main/media/CBOW.gif\" width=\"500\">\n",
     "</div>\n",
     "\n",
     "**Skip-Gram** does the opposite, taking a word of interest as its input (for example, \"me\") and tries to learn how to predict its context words (\"Call\",\"Ishmael\"). \n",
     "\n",
     "<div>\n",
-    "<img src=\"media/SG.gif\" width=\"500\"/>\n",
+    "<img src = \"https://raw.githubusercontent.com/ubcecon/ai-workshop/main/media/SG.gif\" width=\"500\">\n",
+    "\n",
     "</div>\n",
     "\n",
     "In general, CBOW is is faster and does well with frequent words, while Skip-Gram potentially represents rare words better.\n",
@@ -196,7 +199,8 @@
    "source": [
     "## Excercise #1: Eggs, Sausages and Bacon\n",
     "<div>\n",
-    "<img src=\"media/eggs_bacon_sausages.png\" width=\"750\"/>\n",
+    "<img src = \"https://raw.githubusercontent.com/ubcecon/ai-workshop/main/media/eggs_bacon_sausages.png\" width=\"750\">\n",
+    "\n",
     "<div>"
    ]
   },
@@ -243,9 +247,14 @@
     "library(scales)\n",
     "library(MASS)\n",
     "\n",
+    "# Download and extract workshop files\n",
+    "system(\"wget https://github.com/edaigle/ai-workshop/archive/refs/tags/v0.1.zip\")\n",
+    "system(\"unzip v0.1.zip\")\n",
+    "system(\"mkdir media && mkdir resources && mkdir txtlab_Novel450_English\")\n",
+    "system(\"mv ai-workshop-0.1/media . && mv ai-workshop-0.1/resources . && mv ai-workshop-0.1/txtlab_Novel450_English .\")\n",
     "\n",
     "# Set up figures to save properly\n",
-    "options(jupyter.plot_mimetypes = \"image/png\") "
+    "options(jupyter.plot_mimetypes = \"image/png\")"
    ]
   },
   {
@@ -364,11 +373,12 @@
     "\n",
     "Mathematically, this can be represented as: \n",
     "<div>\n",
-    "<img src='media/Dot-Product.png' >\n",
+    "<img src = \"https://raw.githubusercontent.com/ubcecon/ai-workshop/main/media/Dot-Product.png\">\n",
+    "\n",
     "\n",
     "Using our example above, we can see that the angle from (0,0) between Novel C and Novel A (orange triangle) is smaller than between Novel A and Novel B (navy triangle) or between Novel C and Novel B (both triangles together).\n",
     "<div>\n",
-    "<img src=\"media/annotated_scatterplot.png\" width=\"400\"/>\n",
+    "<img src = \"https://raw.githubusercontent.com/ubcecon/ai-workshop/main/media/annotated_scatterplot.png\" width=\"400\">\n",
     "<div>\n",
     "\n",
     "Because this similarity measurement uses the cosine of the angle between vectors, the magnitude is not a matter of concern (this feature is really helpful for text vectors that can often be really long!). Instead, the output of cosine similarity yields a value between 0 and 1 (we don't have to work with something confusing like 18º!) that can be easily interpreted and compared - and thus we can also avoid the troubles associated with other dimensional distance measures such as [Euclidean Distance](https://en.wikipedia.org/wiki/Euclidean_distance)."
@@ -494,7 +504,7 @@
     "## Excercise #2: Working with 18th Century Literature\n",
     "\n",
     "<div>\n",
-    "<img src=\"media/18th_cent_literature.png\" width=\"750\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/ubcecon/ai-workshop/main/media/18th_cent_literature.png\" width=\"750\"/>\n",
     "<div>"
    ]
   },
@@ -1677,7 +1687,7 @@
    "source": [
     "# Load pre-tained model word2vec model from txtLab corpus\n",
     "\n",
-    "model$wv <- gensim$models$KeyedVectors$load_word2vec_format('/resources/word2vec.txtlab_Novel150_English.txt')"
+    "model <- gensim$models$Word2Vec$load('resources/word2vec.txtlab_Novel150_English.bin')"
    ]
   },
   {
@@ -4526,7 +4536,7 @@
    "source": [
     "# Save current model for later use\n",
     "\n",
-    "model$wv$save_word2vec_format('resources/word2vec.txtlab_Novel150_English.txt') \n"
+    "model$save('resources/word2vec.txtlab_Novel150_English.bin') \n"
    ]
   },
   {
@@ -6719,7 +6729,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.2.1"
+   "version": "4.3.1"
   }
  },
  "nbformat": 4,
