Fixing typos to colab and jupyter versions

--- a/advanced_word_embeddings_python_colab_version.ipynb
+++ b/advanced_word_embeddings_python_colab_version.ipynb
@@ -22,7 +22,7 @@
         "\n",
         "<img src=\"media/word_embedding_cover_art.png\" width=\"1000\"/>\n",
         "\n",
-        "_This notebook was prepared by Laura Nelson in collaboration with [UBC COMET](https://comet.arts.ubc.ca/) team members: Jonathan Graves, Angela Chen and Anneke Dresselhuis, Jane Platt_\n",
+        "_This notebook was prepared by Laura Nelson in collaboration with [UBC COMET](https://comet.arts.ubc.ca/) team members: Jonathan Graves, Angela Chen, Anneke Dresselhuis, and Jane Platt_\n",
         "\n",
         "\n",
         "## Prerequisites\n",
@@ -35,9 +35,9 @@
         "\n",
         "In the notebook you will \n",
         "\n",
-        "1. Familiarize yourself with concepts such as word embeddings (WE) vector-space model of language, natural language processing (NLP) and how they relate to small and large language models (LMs) \n",
-        "1. Import and pre-process a textual dataset for use in word embedding \n",
-        "1. Use word2vec to build a simple language model for examining patterns and biases textual datasets\n",
+        "1. Familiarize yourself with concepts such as word embeddings (WE), vector-space model of language, natural language processing (NLP), and how they relate to small and large language models (LMs) \n",
+        "1. Import and pre-process a textual dataset for use in word embeddings\n",
+        "1. Use word2vec to build a simple language model for examining patterns and biases in textual datasets\n",
         "1. Identify and select methods for saving and loading models\n",
         "1. Use critical and reflexive thinking to gain a deeper understanding of how the inherent social and cultural biases of language are reproduced and mapped into language computation models\n",
         "\n",
@@ -68,7 +68,7 @@
         "\n",
         "Building off of the definition above, word embeddings are one way that humans can represent language in a way that is legible to a machine. More specifically, word embeddings are an NLP approach that use vectors to store textual data in multiple dimensions; by existing in the multi-dimensional space of vectors, word embeddings are able to include important semantic information within a given numeric representation.\n",
         "\n",
-        "For example, if we are trying to answer a research question about how popular a term is on the web at a given time, we might use a simple word frequency analysis to count how many times the word \"candidate\" shows up in tweets during a defined electoral period. However, if we wanted to gain a more nuanced understanding of what kind of language, biases or attitudes contextualize the term, \"candidate\" in discourse, we would need to use a method like word embedding to encode meaning into our understanding of how people have talked about candidates over time. Instead of describing our text as a series of word counts, we would treat our text like coordinates in space, where similar words and concepts are closer to each other, and words that are different from each other are further away.\n",
+        "For example, if we are trying to answer a research question about how popular a term is on the web at a given time, we might use a simple word frequency analysis to count how many times the word \"candidate\" shows up in tweets during a defined electoral period. However, if we wanted to gain a more nuanced understanding of what kind of language, biases, or attitudes contextualize the term \"candidate\" in discourse, we would need to use a method like word embedding to encode meaning into our understanding of how people have talked about candidates over time. Instead of describing our text as a series of word counts, we would treat our text like coordinates in space, where similar words and concepts are closer to each other, and words that are different from each other are further away.\n",
         "\n",
         "<img src=\"media/word_frequency_vs_word_embeddings.png\" width=\"500\"/>\n",
         "\n",
@@ -83,7 +83,7 @@
         "\n",
         "<img src=\"media/creating_a_word_embedding.png\" width=\"500\"/>\n",
         "\n",
-        "The magic and mystery of the word embedding process is that often the vectors produced during the model embed qualities of a word or phrase that are not interpretable by humans. However, for our purposes, having the text in vector format is all we need. With this format, we can perform tests like cosine similarity and other kinds of operations. Such operations can reveal many different kinds of relationships between words, as we'll examine a bit later.\n",
+        "The magic and mystery of the word embedding process is that often the vectors produced during the model embed qualities of a word or phrase that are not interpretable by humans. However, for our purposes, having the text in vector format is all we need. With this format, we can perform tests like cosine similarity (which we will explain shortly) and other kinds of operations. Such operations can reveal many different kinds of relationships between words, as we'll examine a bit later.\n",
         "\n",
         "## Using word2vec\n",
         "\n",
@@ -91,7 +91,7 @@
         "\n",
         "The series of algorithms inside of the word2vec model try to describe and acquire parameters for a given word in terms of the text that appear immediately to the right and left in actual sentences. Essentially, it learns how to predict text.\n",
         "\n",
-        "Without going too deep into the algorithm, suffice it to say that it involves a two-step process: \n",
+        "Without going too deep into the algorithm, suffice to say that it involves a two-step process: \n",
         "\n",
         "1. First, the input word gets compressed into a dense vector, as seen in the simplified diagram, \"Creating a Word Embedding,\" above. \n",
         "2. Second, the vector gets decoded into the set of context words. Keywords that appear within similar contexts will have similar vector representations in between steps. \n",
@@ -100,13 +100,13 @@
         "\n",
         "The two main model architectures of word2vec are **Continuous Bag of Words (CBOW)** and **Skip-Gram**, which can be distinguished partly by their input and output during training. \n",
         "\n",
-        "**CBOW** takes the context words (for example, \"Call\", \"Ishmael\") as a single input and tries to predict the word of interest (\"me\").\n",
+        "**CBOW** takes the context words (for example, \"Call\" and \"Ishmael\") as a single input and tries to predict the word of interest (\"me\").\n",
         "\n",
         "<div>\n",
         "<img src=\"media/CBOW.gif\" width=\"500\"/>\n",
         "</div>\n",
         "\n",
-        "**Skip-Gram** does the opposite, taking a word of interest as its input (for example, \"me\") and tries to learn how to predict its context words (\"Call\", \"Ishmael\"). \n",
+        "**Skip-Gram** does the opposite, taking a word of interest as its input (for example, \"me\") and tries to learn how to predict its context words (\"Call\" and \"Ishmael\"). \n",
         "\n",
         "<div>\n",
         "<img src=\"media/SG.gif\" width=\"500\"/>\n",
@@ -231,7 +231,7 @@
         "This raises a question: how can we operationalize our intuition that the spatial distance presented here expresses topical similarity?\n",
         "\n",
         "## Cosine Similarity\n",
-        "The most common measurement of distance between points is their [Cosine Similarity](https://en.wikipedia.org/wiki/Cosine_similarity). Cosine similarity can operate on textual data that contain word vectors and allows us to identify how similar documents are to each other, for example. Cosine Similarity thus helps us understand how much content overlap a set of documents have with one another. For example, imagine that we were to draw an arrow from the origin of the graph - point (0,0) - to the dot representing each text. This arrow is called a _vector_. \n",
+        "The most common measurement of distance between points is their [Cosine Similarity](https://en.wikipedia.org/wiki/Cosine_similarity). Cosine similarity can operate on textual data that contain word vectors and allows us to identify how similar documents are to each other, for example. Cosine similarity thus helps us understand how much content overlap a set of documents have with one another. For example, imagine that we were to draw an arrow from the origin of the graph - point (0,0) - to the dot representing each text. This arrow is called a _vector_. \n",
         "\n",
         "Mathematically, this can be represented as: \n",
         "\n",
@@ -267,8 +267,6 @@
       },
       "outputs": [],
       "source": [
-        "# So we will subtract the similarities from 1\n",
-        "\n",
         "cos_sim = cosine_similarity(dtm_df)"
       ]
     },
@@ -338,7 +336,7 @@
         "cv = CountVectorizer(stop_words = 'english', min_df = 3, binary=True)\n",
         "\n",
         "novel_dtm = cv.fit_transform(text_list).toarray()\n",
-        "feature_list = cv.get_feature_names()\n",
+        "feature_list = cv.get_feature_names_out()\n",
         "dtm_df_novel = pandas.DataFrame(novel_dtm, columns = feature_list, index = novel_names)\n",
         "dtm_df_novel"
       ]
@@ -513,6 +511,8 @@
         "<font color = \"blue\" size=5>At this point you should restart your kernel if < 4 gb memory available</font>\n",
         "    \n",
         "* Do this by clicking on the \"Kernel\" menu and hitting \"restart\"\n",
+        "\n",
+        "<font color = \"blue\" size=5>Be sure to rerun the set-up cell at the top!</font>\n",
         "\n",
         "## Exercise #3: Using word2vec with 150 English Novels\n",
         "\n",
@@ -789,8 +789,7 @@
         "```\n",
         "# Train word2vec model from txtLab corpus\n",
         "\n",
-        "model = gensim.models.Word2Vec(sentences, vector_size=100, window=5, \\\n",
-        "                               min_count=25, sg=1, alpha=0.025, epochs=5, batch_words=10000)\n",
+        "model = gensim.models.Word2Vec(sentences, vector_size=100, window=5, min_count=25, sg=1, alpha=0.025, epochs=5, batch_words=10000)\n",
         "```\n",
         "\n",
         "However, this is both slow and memory intensive, so instead we will load pre-trained data."
@@ -890,7 +889,7 @@
       "metadata": {},
       "source": [
         "### Multiple Valences\n",
-        "A word embedding may encode both primary and secondary meanings that are both present at the same time. In order to identify secondary meanings in a word, we can subtract the vectors of primary (or simply unwanted) meanings. For example, we may wish to remove the sense of <em>river bank</em> from the word <em>bank</em>. This would be written mathetmatically as <em>RIVER - BANK</em>, which in <em>gensim</em>'s interface lists <em>RIVER</em> as a positive meaning and <em>BANK</em> as a negative one."
+        "A word embedding may encode both primary and secondary meanings that are both present at the same time. In order to identify secondary meanings in a word, we can subtract the vectors of primary (or simply unwanted) meanings. For example, we may wish to remove the sense of <em>river bank</em> from the word <em>bank</em>. This would be written mathetmatically as <em>BANK - RIVER</em>, which in <em>gensim</em>'s interface lists <em>BANK</em> as a positive meaning and <em>RIVER</em> as a negative one."
       ]
     },
     {
@@ -1152,8 +1151,7 @@
       "source": [
         "# Save current model for later use\n",
         "\n",
-        "model.save_word2vec_format('resources/word2vec.txtlab_Novel150_English.txt')\n",
-        "#model.save_word2vec_format('resources/word2vec.txtlab_Novel150_English.txt') # deprecated"
+        "model.save_word2vec_format('resources/word2vec.txtlab_Novel150_English.txt')"
       ]
     },
     {
@@ -1169,8 +1167,7 @@
         "# Model trained on Eighteenth Century Collections Online corpus (~2500 texts)\n",
         "# Made available by Ryan Heuser: http://ryanheuser.org/word-vectors-1/\n",
         "\n",
-        "ecco_model = gensim.models.KeyedVectors.load_word2vec_format('resources/word2vec.ECCO-TCP.txt')\n",
-        "#ecco_model = gensim.models.Word2Vec.load_word2vec_format('resources/word2vec.ECCO-TCP.txt') # deprecated"
+        "ecco_model = gensim.models.KeyedVectors.load_word2vec_format('resources/word2vec.ECCO-TCP.txt')"
       ]
     },
     {
@@ -1242,7 +1239,7 @@
       },
       "outputs": [],
       "source": [
-        "## EX. How does our model answer the analogy: MADRID is to SPAIN as PARIS is to __________\n",
+        "## EX. How does our model answer the analogy: MADRID is to SPAIN as PARIS is to __________?\n",
         "\n",
         "## Q.  What has our model learned about nation-states?\n",
         "\n",
@@ -1314,7 +1311,7 @@
         "## Concluding Remarks and Resources\n",
         "Throughout this notebook we have seen how a number of mathematical operations can be used to explore word2vec's word embeddings. Hopefully this notebook has allowed you to see how the inherent biases of language become coded into word embeddings and systems that use word embeddings cannot be treated as search engines. \n",
         "\n",
-        "While getting inside the technics of these computational processes can enable us to answer a set of new, interesting questions dealing with semantics, there are many other questions that remain unanswered.\n",
+        "While getting inside the techniques of these computational processes can enable us to answer a set of new, interesting questions dealing with semantics, there are many other questions that remain unanswered.\n",
         "\n",
         "For example:\n",
         "* Many language models are built using text from large, online corpora (such as Wikipedia, which is known to have a contributor basis that is majority white, college-educated men) - what kind of impact might this have on a language model?\n",
