--- a/advanced_llm_apis2_collab.ipynb
+++ b/advanced_llm_apis2_collab.ipynb
@@ -27,6 +27,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "os.system(\"wget https://github.com/ubcecon/ai-workshop/archive/refs/heads/ccss-2024-llm.zip\")\n",
+    "os.system(\"unzip ccss-2024-llm\")\n",
+    "os.system(\"mkdir media && mkdir resources && mkdir txtlab_Novel450_English\")\n",
+    "os.system(\"mv ai-workshop-ccss-2024/media . && mv ai-workshop-ccss-2024/resources . && mv ai-workshop-ccss-2024/txtlab_Novel450_English .\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "ZudpjwQktqtY"
@@ -920,7 +934,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
