minor fixes and added way of getting csv files

--- a/advanced_llm_apis2_collab.ipynb
+++ b/advanced_llm_apis2_collab.ipynb
@@ -27,20 +27,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "\n",
-    "os.system(\"wget https://github.com/ubcecon/ai-workshop/archive/refs/heads/ccss-2024-llm.zip\")\n",
-    "os.system(\"unzip ccss-2024-llm\")\n",
-    "os.system(\"mkdir media && mkdir resources && mkdir txtlab_Novel450_English\")\n",
-    "os.system(\"mv ai-workshop-ccss-2024/media . && mv ai-workshop-ccss-2024/resources . && mv ai-workshop-ccss-2024/txtlab_Novel450_English .\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "ZudpjwQktqtY"
@@ -79,6 +65,27 @@
     "## Steps for collab (skip if you are running locally!)\n",
     "\n",
     "If we want to use the notebooks on collab, we'll have to install ollama on collab using xterm, which allows users without collab premium to open the terminal in a cell. Run the cells below to install colab-xterm and open a terminal."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "os.system(\"wget https://github.com/ubcecon/ai-workshop/archive/refs/heads/ccss-2024-llm.zip\")\n",
+    "os.system(\"unzip ccss-2024-llm\")\n",
+    "\n",
+    "csv_path = (\"ai-workshop-ccss-2024-llm/survey_responses_election.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After running this cell, press the `refresh` button at the top left of your screen."
    ]
   },
   {
@@ -298,7 +305,11 @@
     "\n",
     "`curl -fsSL https://ollama.com/install.sh | sh`\n",
     "\n",
-    "`ollama serve & ollama pull llama3`"
+    "`ollama serve`\n",
+    "\n",
+    "Then, **re-run** the same cell to create a new terminal.\n",
+    "\n",
+    "In that new terminal, enter: `ollama pull`."
    ]
   },
   {
@@ -418,6 +429,8 @@
    "source": [
     "import pandas as pd\n",
     "import ollama\n",
+    "import sys\n",
+    "sys.path.append('ai-workshop-ccss-2024-llm')\n",
     "from advanced_llm_apis2_tests import Tests"
    ]
   },
@@ -638,7 +651,7 @@
    ],
    "source": [
     "# Read the CSV file with the survey responses\n",
-    "df = pd.read_csv('survey_responses_election.csv')\n",
+    "df = pd.read_csv(csv_path)\n",
     "\n",
     "# Display the first few rows of the DataFrame to verify the content\n",
     "print(df.head())"
