--- a/advanced_llm_apis2_collab.ipynb
+++ b/advanced_llm_apis2_collab.ipynb
@@ -742,7 +742,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "survey_responses = pd.read_csv('survey_responses_election.csv')\n",
+    "survey_responses = pd.read_csv(csv_path)\n",
     "\n",
     "responses = survey_responses['Response']"
    ]
