--- a/advanced_llm_apis2_collab.ipynb
+++ b/advanced_llm_apis2_collab.ipynb
@@ -911,6 +911,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentiment_summary = survey_responses['Sentiment'].value_counts()\n",
+    "print(sentiment_summary)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "-PkJEoIwtquM"
