--- a/advanced_llm_apis2_collab.ipynb
+++ b/advanced_llm_apis2_collab.ipynb
@@ -929,10 +929,10 @@
     "# Conclusion\n",
     "\n",
     "## Recap of What Was Learned\n",
-    "- We re-introduced the concept of Large Language Models (LLMs) and their applications.\n",
+    "- We introduced the concept of Large Language Models (LLMs) and their applications.\n",
     "- We set up the environment and connected to the Ollama API.\n",
     "- We explored how to use LLMs with example prompts and responses.\n",
-    "- We created our own embeddings from which we could make api calls to the Ollama API with the additional context of the given pdf.\n",
+    "- We created our own embeddings from which we could make api calls to BERT and conduct sentiment analysis.\n",
     "\n",
     "For more information about word embeddings and retrieval-augmented generation (RAG) see our other applicable notebooks.\n"
    ]
